# paper-P03-sgsma-frequency-estimators-benchmark

./: .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.full  LICENSE  PATTERNS.md  PROJECT_BRAIN_CLAUDE1.md  README.md  REFACTOR_PLAN1.md  RELEASE_CHECKLIST.md  REVIEW1.md  ROADMAP.md  ROADMAP1.md  SECURITY.md  docker-compose.yml  hypotheses.yaml  hypotheses_schema.yaml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-canonical.yml  deploy-pages.yml  nightly-benchmark.yml  release-pypi.yml
.temp/: paper_index.txt
.temp/paper copy/: ROADMAP.md  ROADMAP_CLAUDE.md  index.blg  index.tex
docs/: index.html  styles.css
paper/: MAJOR_REVISION_ROADMAP.md  ROADMAP.md  SUPPLEMENT_TRACEABILITY.md  index.aux  index.bbl  index.blg  index.out  index.tex
paper_extended/: index.bbl  index.tex
paper_submit/: index.tex
paper_submit_v2/: 2026149998.tex  index.bbl  index.blg  index.tex
reports/: benchmark_report.html  benchmark_report.md  benchmark_run_manifest.json
results0/: benchmark_results.json
src/: claude.md  ekf2.py  estimators.py  pi_gru_pmu_config.json  pigru_model.py  plot_ibr_v2.py  plotting.py  scenarios.py  test_koopman_consistency.py  test_pigru_sanity.py  train_pigru.py
src232__/: benchmark_plottings.py  main.py  pigru_train.py
tests/: conftest.py
(+1045 files in other folders)
